added google font

--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,9 @@
-  
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@300;500&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-
-
-@font-face {
-    font-family: Monda;
-    src: url(./assets/Monda-Regular.ttf);
-}
 html{
     scroll-behavior: smooth;
 
@@ -18,7 +12,6 @@ html{
 *{
     padding: 0;
     margin: 0;
-    font-family: Monda;
 }
 *::selection{
     background-color: #7c7c7c;
