--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,14 @@ html{
     scroll-behavior: smooth;
 
 }
+body{
+  overflow-x: hidden;
+}
 
 *{
     padding: 0;
     margin: 0;
+    font-family: Sora;
 }
 *::selection{
     background-color: #7c7c7c;
