--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ html{
     padding: 0;
     margin: 0;
     font-family: Sora;
+    box-sizing: border-box;
 }
 *::selection{
     background-color: #7c7c7c;
