--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ html{
     font-family: Sora;
     box-sizing: border-box;
 }
+
+
+.gridy{
+  grid-column: 1/3;
+}
 *::selection{
     background-color: #7c7c7c;
 
